# vscode_remote_python

./: pyproject.toml  requirements.txt  sample.py
.devcontainer/: Dockerfile  devcontainer.json
