[tool.poetry]
name = "practice"
version = "0.1.0"
description = ""
authors = ["venguru <kin.sh0717@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.0.5"
numpy = "^1.19.0"
scikit-learn = "^0.23.1"
statsmodels = "^0.11.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.3"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
